// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders active button 1`] = `
<button
  className="btn active"
  onClick={[Function]}
>
  Ipsum Bar
</button>
`;

exports[`Renders button 1`] = `
<button
  className="btn"
  onClick={[Function]}
>
  Lorem Foo
</button>
`;

exports[`Renders button with an icon 1`] = `
<button
  className="btn btn-icon"
  onClick={[Function]}
>
  <svg
    className="svg-icon icon-folder"
    role="img"
    style={Object {}}
  >
    <use
      viewBox="0 0 512 512"
      xlinkHref="/icons/16/folder.svg#folder"
    />
  </svg>
</button>
`;

exports[`Renders button with an icon and Text 1`] = `
<button
  className="btn btn-icon"
  onClick={[Function]}
>
  <svg
    className="svg-icon icon-folder"
    role="img"
    style={Object {}}
  >
    <use
      viewBox="0 0 512 512"
      xlinkHref="/icons/16/folder.svg#folder"
    />
  </svg>
   Foo
</button>
`;
